# src/server/Api/Storage.php
@@ -16,6 +16,8 @@ class Storage extends \Blogstep\AuthenticatedSnippet
         if (isset($this->request->query['key'])) {
             $key = $this->request->query['key'];
             $document = $storage->getDocument($key);
+        } else if (isset($this->request->query['filter']) and is_array($this->request->query['filter'])) {
+            $document = $storage->getDocuments($this->request->query['filter']);
         } else {
             $document = $storage->getDocuments();
         }
